added a request to get a user by id
