# build/swagger.json
@@ -146,6 +146,9 @@
 			},
 			"IModel": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
 					"model_avatar": {
 						"type": "string"
 					},
@@ -165,6 +168,7 @@
 					}
 				},
 				"required": [
+					"id",
 					"model_avatar",
 					"full_name",
 					"description",
@@ -176,6 +180,9 @@
 			},
 			"IPhotographer": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
 					"photograph_avatar": {
 						"type": "string"
 					},
@@ -195,11 +202,66 @@
 					}
 				},
 				"required": [
+					"id",
 					"photograph_avatar",
 					"full_name",
 					"description",
 					"average_raiting",
 					"count_of_reviews"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IDescriptionUser": {
+				"properties": {
+					"avatar": {
+						"type": "string"
+					},
+					"first_name": {
+						"type": "string"
+					},
+					"last_name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"average_raiting": {
+						"type": "number",
+						"format": "double"
+					},
+					"count_of_reviews": {
+						"type": "number",
+						"format": "double"
+					},
+					"price_per_hour": {
+						"type": "number",
+						"format": "double"
+					},
+					"photo_types": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"avatar",
+					"first_name",
+					"last_name",
+					"email",
+					"role",
+					"description",
+					"average_raiting",
+					"count_of_reviews",
+					"price_per_hour",
+					"photo_types"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -421,6 +483,7 @@
 									"Example 1": {
 										"value": [
 											{
+												"id": "1",
 												"model_avatar": "https://i.pinimg.com/736x/ff/75/e7/ff75e70833921cbb8ff7e2c4d36167bd.jpg",
 												"full_name": "Valeria Mikhailenko",
 												"description": "For more than 3 years I have specialized in modeling urban and natural objects, as well as portraits",
@@ -522,6 +585,7 @@
 									"Example 1": {
 										"value": [
 											{
+												"id": "1",
 												"photograph_avatar": "https://i.pinimg.com/736x/ff/75/e7/ff75e70833921cbb8ff7e2c4d36167bd.jpg",
 												"full_name": "Valeria Mikhailenko",
 												"description": "For more than 3 years I have been specializing in shooting urban and natural objects, as well as portraits",
@@ -652,6 +716,74 @@
 						}
 					}
 				}
+			}
+		},
+		"/users/{userId}": {
+			"get": {
+				"operationId": "GetUserById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IDescriptionUser"
+										},
+										{
+											"$ref": "#/components/schemas/IBadResponse"
+										}
+									]
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"avatar": "https://i.pinimg.com/736x/ff/75/e7/ff75e70833921cbb8ff7e2c4d36167bd.jpg",
+											"first_name": "Valeria",
+											"last_name": "Mikhailenko",
+											"email": "test@gmail.com",
+											"role": "photograph",
+											"description": "For more than 3 years I have been specializing in shooting urban and natural objects, as well as portraits",
+											"average_raiting": 5,
+											"count_of_reviews": 265,
+											"price_per_hour": 1600,
+											"photo_types": [
+												"wedding",
+												"pets",
+												"model_tests"
+											]
+										}
+									}
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Users Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IBadResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
