# src/user/user.dto.ts
@@ -19,3 +19,16 @@ export interface IPhotoParams {
     limit?: number;
     offset?: number;
 }
+
+export interface IDescriptionUser {
+    avatar: string;
+    first_name: string;
+    last_name: string;
+    email: string;
+    role: string;
+    description: string;
+    average_raiting: number;
+    count_of_reviews: number;
+    price_per_hour: number;
+    photo_types: string[];
+}
